# FourierTests

./: .gitignore  ChangeLog.md  Dockerfile  FourierTest.cabal  README.md  TestSeq.cabal  bench_27_06_2019.html  fourier32x32.gnuplot  input_gen.py  make_fourier_dat.sh  make_quicksort_dat.sh  process_csv.py  qs_jizo.xlsx  quicksort-100.gnuplot  quicksort-1000.gnuplot  quicksort-10000.gnuplot  script.sh  script_qs.sh  stack.yaml  stack_git.yaml  stack_paths.yaml
Futhark/: complex.fut  fft-lib.fut  fft.fut  fft_python.py  futhark.pkg  input_gen.py  list_100_1000.in  list_100_1000.out  list_10_10.in  list_10_10.out  makeinput.sh  quicksort.fut  quicksortTest.fut
GPU-ArraySort-2.0/: GPU-ArraySort-2-0.cu
ResultsPaper/fourier/: fourier32x32.gnuplot
ResultsPaper/quicksort/: quicksort-100.gnuplot  quicksort-1000.gnuplot  quicksort-10000.gnuplot
app/: Main.hs
c++/: a.out  multi.cpp
cubits/: twine_f32.cu  twine_f32.ptx  twine_f64.cu  twine_f64.ptx
data/: input_gen.py
src/: FFT.hs  FFTAdhoc.hs  FourierTest.hs  GPUFFT.hs  Lib.hs  QuickSort.hs  QuickSortTest.hs  ReadFile.hs
